@@ -37,7 +37,8 @@ build_triplet = @build@
 host_triplet = @host@
 subdir = scripts
 DIST_COMMON = $(srcdir)/GNUmakefile.am $(srcdir)/GNUmakefile.in \
-	$(srcdir)/rtai-config.in $(srcdir)/rtai-load.in
+	$(srcdir)/rtai-config.in $(srcdir)/rtai-load.in \
+	$(srcdir)/rtai-test.in
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/config/autoconf/docbook.m4 \
 	$(top_srcdir)/configure.in
@@ -45,7 +46,7 @@ am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
 	$(ACLOCAL_M4)
 mkinstalldirs = $(SHELL) $(top_srcdir)/config/autoconf/mkinstalldirs
 CONFIG_HEADER = $(top_builddir)/rtai_config.h
-CONFIG_CLEAN_FILES = rtai-config rtai-load
+CONFIG_CLEAN_FILES = rtai-config rtai-load rtai-test
 SOURCES =
 DIST_SOURCES =
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
@@ -258,7 +259,7 @@ sharedstatedir = @sharedstatedir@
 subdirs = @subdirs@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
-EXTRA_DIST = rtai-info bootstrap $(wildcard $(srcdir)/postinstall.sh)
+EXTRA_DIST = rtai-info bootstrap $(wildcard postinstall.sh)
 all: all-am
 
 .SUFFIXES:
@@ -295,6 +296,8 @@ rtai-config: $(top_builddir)/config.status $(srcdir)/rtai-config.in
 	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
 rtai-load: $(top_builddir)/config.status $(srcdir)/rtai-load.in
 	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
+rtai-test: $(top_builddir)/config.status $(srcdir)/rtai-test.in
+	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
 
 mostlyclean-libtool:
 	-rm -f *.lo
@@ -313,7 +316,6 @@ CTAGS:
 
 
 distdir: $(DISTFILES)
-	$(mkdir_p) $(distdir)/$(srcdir)
 	@srcdirstrip=`echo "$(srcdir)" | sed 's|.|.|g'`; \
 	topsrcdirstrip=`echo "$(top_srcdir)" | sed 's|.|.|g'`; \
 	list='$(DISTFILES)'; for file in $$list; do \
@@ -428,6 +430,7 @@ install-exec-local:
 	$(mkinstalldirs) $(DESTDIR)$(bindir)
 	$(INSTALL_SCRIPT) rtai-config $(DESTDIR)$(bindir)
 	$(INSTALL_SCRIPT) rtai-load $(DESTDIR)$(bindir)
+	$(INSTALL_SCRIPT) rtai-test $(DESTDIR)$(bindir)
 	$(INSTALL_SCRIPT) $(srcdir)/rtai-info $(DESTDIR)$(bindir)
 	@if test -r $(srcdir)/postinstall.sh; then \
 	   echo "Running post-install script..." ;\
@@ -438,6 +441,7 @@ uninstall-local:
 	$(RM) $(DESTDIR)$(bindir)/rtai-info
 	$(RM) $(DESTDIR)$(bindir)/rtai-load
 	$(RM) $(DESTDIR)$(bindir)/rtai-config
+	$(RM) $(DESTDIR)$(bindir)/rtai-test
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
 .NOEXPORT:
